--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link active" aria-current="page" href="file:///C:/Users/localuser/Documents/traveller/traveller70.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">about</a>
+          <a class="nav-link" href="index(2).html">about</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
